가로스크롤 제거

--- a/index.html
+++ b/index.html
@@ -1,10 +1,197 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="utf-8">
-  <title> 신주연 포트폴리오 테스트 </title>
+    <meta charset="utf-8">
+    <title> 신주연의 포트폴리오 </title>
+    <link rel="stylesheet" href="css/layout.css">
+    <script src="js/jquery-1.12.4.min.js"></script>
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="js/fullpage.js"></script>
 </head>
+
 <body>
-  <h1>신주연 포트폴리오 테스트</h1>
+    <header id="header">
+        <div class="area">
+            <!--1. h1번 로고 하나 넣기  클래스 이름 블라인드처리 -->
+            <h1 class="blind">PORTFOLIO</h1>
+            <nav id="gnb">
+                <ul>
+                    <li><a href="">About me</a></li>
+                    <li><a href="">Web Publishing</a></li>
+                    <li><a href="">Web Accessibility</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <div id="container">
+        <section class="section" id="cnt1">
+            <div class="cnt1_cd"><a href=""><img src="images/main_cd.png" alt="" class="cd_main"><img src="images/main_cd_play.png" alt="" class="cd_play_btn"></a></div>
+            <div class="cnt1_txt"><img src="images/main_title.png" alt=""></div>
+            <div class="cnt1_date cnt1_date_b"><p>2021<p></div>
+            <div class="cnt1_date cnt1_date_o"><p>2021<p></div>
+        </section>
+        <section class="section" id="cnt2">
+            <h2>About me</h2> <!-- 주황 막대기 가상요소로 만들기 -->
+            <div class="left_circle">
+                <h3>SKILS</h3>
+                <div class="skil skil_c1">
+                    <a href="">
+                        <p>Html</p>
+                    </a>
+                </div>
+                <div class="skil skil_c2">
+                    <a href="">
+                        <p>Java<br>Script</p>
+                    </a>
+                </div>
+                <div class="skil skil_c3">
+                    <p>Css</p>
+                </div>
+                <div class="skil skil_c4">
+                    <a href="">
+                        <p>Jquery</p>
+                    </a>
+                </div>
+                <div class="skil skil_c5">
+                    <a href="">
+                        <p>Sass</p>
+                    </a>
+                </div>
+                <div class="skil skil_c6">
+                    <a href="">
+                        <p>Ps</p>
+                    </a>
+                </div>
+                <div class="skil skil_c7">
+                    <a href="">
+                        <p>Ai</p>
+                    </a>
+                </div>
+            </div>
+            <div class="right_circle">
+                <ul>
+                    <li>
+                        <a href="">
+                            <h3>EDUCATION</h3>
+                            <span>2020.09 - 2021.03</span><P>하이미디어IT융합인제개발원<br>디지털미디어 웹디자인(웹퍼블리셔) 과정 수료</P>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <h3>CERTIFICATION</h3>
+                            <span>2020.12</span><br><P>GTQ 그래픽 기술 자격 1급<br><span>2021.02</span><br>웹디자인 기능사 필기</P>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <h3>RESUME</h3>
+                            <p class="orange_txt">포트폴리오 PDF</p>
+                            <p>sallywndus＠naver.com</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <h3>LIKE</h3>
+                            <p>음악감상, 전시회보기,<br>수영, 사진찍기</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="section" id="cnt3">
+            <h2>WEB PUBLISHING</h2>
+            <ul class="btn">
+                <li class="prev_btn"><a href=""><img src="images/sec_icon_prev.png" alt=""></a></li>
+                <li class="next_btn"><a href=""><img src="images/sec_icon_next.png" alt=""></a></li>
+            </ul>
+            <ul class="content">
+                <li class="big"><a href=""><!-- <img src="images/main_section_1_img1 (2).jpg" alt=""> --><h4>뮤즈갤러리</h4></a>
+                <ul>
+                    <li><a href="">PUBLISHING</a></li>
+                    <li><a href="">ORIGINAL SITE</a></li>
+                </ul>
+                </li>
+                <li class="small small1"><a href=""><!-- <img src="images/bg_mainMovieBg_1 (1).jpg" alt=""> --><h4>대한통운</h4></a>
+                <ul>
+                    <li><a href="">PUBLISHING</a></li>
+                    <li><a href="">ORIGINAL SITE</a></li>
+                </ul>
+                </li>
+                <li class="small small2"><a href=""><!-- <img src="images/bg_nongsim.jpg" alt=""> --><h4>농심</h4></a>
+                <ul>
+                    <li><a href="">PUBLISHING</a></li>
+                    <li><a href="">ORIGINAL SITE</a></li>
+                </ul>  
+                </li>
+                <li class="small small3"><a href=""><!-- <img src="images/20200410162818.jpg" alt=""> --><h4>라온시큐어</h4></a>
+                <ul>
+                    <li><a href="">PUBLISHING</a></li>
+                    <li><a href="">ORIGINAL SITE</a></li>
+                </ul>
+                </li>
+            </ul>
+        </section>
+        <section class="section" id="cnt4">
+            <h2>WEB ACCESSIBILITY</h2>
+            <ul class="btn">
+                <li class="prev_btn"><a href=""><img src="images/sec_icon_prev.png" alt=""></a></li>
+                <li class="next_btn"><a href=""><img src="images/sec_icon_next.png" alt=""></a></li>
+            </ul>
+            <div id="box">
+                <div class="view_site"><img src="" alt=""></div>
+                <div class="view_acc"><img src="" alt=""></div>
+                <div class="view_code"><img src="" alt=""></div>
+            </div>
+            <div id="circle">
+                <p>안녕하세요안녕하세요안녕하세요안녕하세요안녕하세요안녕하세요<br>
+                    안녕하세요안녕하세요안녕하세요안녕하세요안녕하세요안녕하세요<br>
+                    안녕하세요안녕하세요안녕하세요안녕하세요안녕하세요안녕하세요<br>
+                    안녕하세요안녕하세요안녕하세요안녕하세요안녕하세요안녕하세요안녕하세요
+                </p>
+            </div>
+        </section>
+        <section class="section" id="cnt5">
+            <h2>THANKYOU FOR WAHTCHING</h2>
+            <ul>
+                <li><a href="">sallywndus＠naver.com</a></li>
+                <li><a href="">포트폴리오 다운받기</a></li>
+            </ul>
+            <button type="button" class="img_btn"><img src="images/" alt=""></button>
+            <!-- <button type="button" class="pdf_btn"><a href="">PDF</a></button> -->
+            <a href="">PDF</a>
+            <!-- pdf 파일로 이동하는 건 a태그 -->
+        </section>
+    </div>
+    <nav id="indicator">
+        <ul>
+            <li>
+                <button type="button" class="nav_btn" data-href="#cnt1"><!-- 인덱스번호 나 클릭하면 이동할 대상을 지정하여 스크립트에서 처리 -->
+                    <!-- span 태그 icon 필요없음 -->
+                    <span class="txt">01</span>
+                </button>
+            </li>
+            <li>
+                <button type="button" class="nav_btn">
+                    <span class="txt">02</span>
+                </button>
+            </li>
+            <li>
+                <button type="button" class="nav_btn">
+                    <span class="txt">03</span>
+                </button>
+            </li>
+            <li>
+                <button type="button" class="nav_btn">
+                    <span class="txt">04</span>
+                </button>
+            </li>
+            <li>
+                <button type="button" class="nav_btn">
+                    <span class="txt">05</span>
+                </button>
+            </li>
+        </ul>
+    </nav>
 </body>
 </html>
